--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@vueuse/core": "^9.2.0",
     "firebase": "^9.10.0",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
